# docs/swagger.json
@@ -1,8 +1,25 @@
 {
+    "schemes": [
+        "https"
+    ],
     "swagger": "2.0",
     "info": {
-        "contact": {}
+        "description": "Bitcoin Attestation Protocol (BAP) indexer API for managing digital identities and attestations",
+        "title": "Sigma Identity API",
+        "termsOfService": "https://api.sigmaidentity.com/terms/",
+        "contact": {
+            "name": "Sigma Identity API Support",
+            "url": "https://github.com/BitcoinSchema/go-bap-indexer",
+            "email": "support@sigmaidentity.com"
+        },
+        "license": {
+            "name": "Apache 2.0",
+            "url": "http://www.apache.org/licenses/LICENSE-2.0.html"
+        },
+        "version": "1.0"
     },
+    "host": "api.sigmaidentity.com",
+    "basePath": "/v1",
     "paths": {
         "/": {
             "get": {
@@ -29,7 +46,7 @@
         },
         "/attestation/get": {
             "post": {
-                "description": "Get an attestation by its hash",
+                "description": "Retrieves an attestation using its unique hash identifier",
                 "consumes": [
                     "application/json"
                 ],
@@ -39,7 +56,7 @@
                 "tags": [
                     "attestation"
                 ],
-                "summary": "Get attestation",
+                "summary": "Get attestation by hash",
                 "parameters": [
                     {
                         "description": "Attestation hash",
@@ -53,13 +70,25 @@
                 ],
                 "responses": {
                     "200": {
-                        "description": "OK",
+                        "description": "Successful response with attestation data",
                         "schema": {
-                            "$ref": "#/definitions/server.Response"
+                            "allOf": [
+                                {
+                                    "$ref": "#/definitions/server.Response"
+                                },
+                                {
+                                    "type": "object",
+                                    "properties": {
+                                        "result": {
+                                            "$ref": "#/definitions/types.Attestation"
+                                        }
+                                    }
+                                }
+                            ]
                         }
                     },
                     "404": {
-                        "description": "Not Found",
+                        "description": "Attestation not found",
                         "schema": {
                             "$ref": "#/definitions/server.Response"
                         }
@@ -128,13 +157,72 @@
     },
     "definitions": {
         "server.Response": {
+            "description": "Standard API response wrapper",
             "type": "object",
             "properties": {
                 "message": {
+                    "description": "Optional error message",
+                    "type": "string",
+                    "example": "Operation completed successfully"
+                },
+                "result": {
+                    "description": "Response payload"
+                },
+                "status": {
+                    "description": "Status of the response (\"OK\" or \"ERROR\")",
+                    "type": "string",
+                    "example": "OK"
+                }
+            }
+        },
+        "types.Attestation": {
+            "type": "object",
+            "properties": {
+                "attribute": {
                     "type": "string"
                 },
-                "result": {},
-                "status": {
+                "hash": {
+                    "type": "string"
+                },
+                "nonce": {
+                    "type": "string"
+                },
+                "signers": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/types.Signer"
+                    }
+                },
+                "urn": {
+                    "type": "string"
+                },
+                "value": {
+                    "type": "string"
+                }
+            }
+        },
+        "types.Signer": {
+            "type": "object",
+            "properties": {
+                "block": {
+                    "type": "integer"
+                },
+                "idKey": {
+                    "type": "string"
+                },
+                "revoked": {
+                    "type": "boolean"
+                },
+                "sequence": {
+                    "type": "integer"
+                },
+                "signingAddress": {
+                    "type": "string"
+                },
+                "timestamp": {
+                    "type": "integer"
+                },
+                "txId": {
                     "type": "string"
                 }
             }
